<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btnInsertMovieClient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/insert_movie_client" />

    <Button
        android:id="@+id/btnReadMovieClient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnInsertMovieClient"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/read_movie_client" />

    <Button
        android:id="@+id/btnInsertMovieServer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnReadMovieClient"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/insert_movie_server" />

    <Button
        android:id="@+id/btnReadMovieServer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btnInsertMovieServer"
        android:layout_marginTop="15dp"
        android:text="@string/read_movie_server" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/hello_world" />

</RelativeLayout>